[gd_scene load_steps=5 format=2]

[ext_resource path="res://CanvasLayer2.gd" type="Script" id=1]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=2]
[ext_resource path="res://CanvasLayer3.gd" type="Script" id=3]
[ext_resource path="res://CanvasLayer4.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="LabelCanvasLayer1" type="Label" parent="CanvasLayer"]
margin_left = 99.0
margin_top = 95.0
margin_right = 246.0
margin_bottom = 147.0

[node name="ButtonCanvasLayer1" type="Button" parent="CanvasLayer"]
margin_left = 99.0
margin_top = 32.0
margin_right = 247.0
margin_bottom = 78.0
text = "Show List"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="LineEditCanvasLayer2" type="LineEdit" parent="CanvasLayer2"]
margin_left = 291.0
margin_top = 34.0
margin_right = 413.0
margin_bottom = 76.0

[node name="ButtonCanvasLayer2" type="Button" parent="CanvasLayer2"]
margin_left = 293.0
margin_top = 89.0
margin_right = 415.0
margin_bottom = 129.0
text = "Show List"

[node name="LabelCanvasLayer2" type="Label" parent="CanvasLayer2"]
margin_left = 294.0
margin_top = 143.0
margin_right = 416.0
margin_bottom = 179.0

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="LabelCanvasLayer3" type="Label" parent="CanvasLayer3"]
margin_left = 438.0
margin_top = 35.0
margin_right = 544.0
margin_bottom = 74.0

[node name="CanvasLayer4" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="LineEditCanvasLayer4" type="LineEdit" parent="CanvasLayer4"]
margin_left = 595.0
margin_top = 31.0
margin_right = 721.0
margin_bottom = 82.0

[node name="LabelCanvasLayer4" type="Label" parent="CanvasLayer4"]
margin_left = 598.0
margin_top = 130.0
margin_right = 722.0
margin_bottom = 180.0

[node name="ButtonCanvasLayer4" type="Button" parent="CanvasLayer4"]
margin_left = 596.0
margin_top = 89.0
margin_right = 721.0
margin_bottom = 123.0
text = "Show Text"

[connection signal="pressed" from="CanvasLayer/ButtonCanvasLayer1" to="CanvasLayer" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer2/ButtonCanvasLayer2" to="CanvasLayer2" method="_on_ButtonCanvasLayer2_pressed"]
[connection signal="pressed" from="CanvasLayer4/ButtonCanvasLayer4" to="CanvasLayer4" method="_on_ButtonCanvasLayer4_pressed"]
